# card_world

./: Cargo.toml
assets/data/: options.json
assets/lang/: en.ftl  zh-Hans.ftl  zh-Hant.ftl
assets/lang/en/: foo.ftl
assets/lang/en-US/: fee.ftl  foo.ftl  main.ftl.ron
assets/lang/zh-CN/: foo.ftl  main.ftl.ron
assets/lang/zh-Hans/: foo.ftl
assets/lang/zh-Hant/: foo.ftl  main.ftl.ron
assets/lang/zh-TW/: foo.ftl  main.ftl.ron
assets/mods/islands/: modinfo.json  world.json
assets/mods/islands/lang/: en.ftl  zh-Hans.ftl
assets/mods/islands/lang/en-US/: main.ftl.ron
assets/mods/islands/lang/zh-CN/: main.ftl.ron
src/: game.rs  main.rs  ui.rs
src/game/: generate_world.rs  load_task.rs  modinfo.rs  options.rs  world.rs
src/ui/: fps.rs  i18n.rs  load_font.rs  load_i18n.rs  load_task.rs  main_menu.rs  options.rs  show_fps.rs  show_main_menu.rs  show_new_game.rs  show_options.rs  show_saves.rs  show_tests.rs  update_options.rs
src/ui/i18n/: asset.rs  load.rs  resource.rs
src/ui/main_menu/: hidden_main_menu_system.rs  options.rs  show_main_menu.rs  show_main_menu_system.rs  show_new_game.rs  show_options.rs  update_main_menu_system.rs
src/ui/main_menu/options/: show_options_system.rs  update_options_system.rs
src/ui/show_main_menu/: show_new_game.rs  show_options.rs
src/ui/show_tests/: show_generate_world.rs  show_mod_list.rs  show_tests_generate_world.rs
