[package]
name = "card_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.21.0"
fluent_content = "0.0.5"
noise = "0.8.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
unic-langid = "0.9.4"
rand = "0.8.5"
fluent = "0.16.0"
intl-memoizer = "0.5.1"
fluent-langneg = "0.13.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
