[package]
name = "card_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.22"
fluent_content = "0.0"
noise = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unic-langid = "0.9"
rand = "0.8"
fluent = "0.16"
intl-memoizer = "0.5"
fluent-langneg = "0.13"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
