[package]
name = "card_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["bevy_asset", "bevy_core_pipeline", "bevy_winit", "multi-threaded", "x11", "dynamic_linking"] }
bevy-inspector-egui = { version = "0.23", default-features = false }

fluent_content = "0.0"
fluent = "0.16"
fluent-langneg = "0.13"
unic-langid = "0.9"
intl-memoizer = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

noise = "0.8"
rand = "0.8"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
